--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.4.1",
     "mongoose": "^4.2.5",
